--- a/Instructions/Pymaceuticals/Homework-Take1.ipynb
+++ b/Instructions/Pymaceuticals/Homework-Take1.ipynb
@@ -21,200 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_months</th>\n",
-       "      <th>Weight (g)</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>5</td>\n",
-       "      <td>38.825898</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35.014271</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>34.223992</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20</td>\n",
-       "      <td>32.997729</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1888</td>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>25</td>\n",
-       "      <td>63.145652</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1889</td>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>65.841013</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1890</td>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>35</td>\n",
-       "      <td>69.176246</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1891</td>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>40</td>\n",
-       "      <td>70.314904</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1892</td>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1893 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0        k403     Ramicane  Male          21          16          0   \n",
-       "1        k403     Ramicane  Male          21          16          5   \n",
-       "2        k403     Ramicane  Male          21          16         10   \n",
-       "3        k403     Ramicane  Male          21          16         15   \n",
-       "4        k403     Ramicane  Male          21          16         20   \n",
-       "...       ...          ...   ...         ...         ...        ...   \n",
-       "1888     z969     Naftisol  Male           9          30         25   \n",
-       "1889     z969     Naftisol  Male           9          30         30   \n",
-       "1890     z969     Naftisol  Male           9          30         35   \n",
-       "1891     z969     Naftisol  Male           9          30         40   \n",
-       "1892     z969     Naftisol  Male           9          30         45   \n",
-       "\n",
-       "      Tumor Volume (mm3)  Metastatic Sites  \n",
-       "0              45.000000                 0  \n",
-       "1              38.825898                 0  \n",
-       "2              35.014271                 1  \n",
-       "3              34.223992                 1  \n",
-       "4              32.997729                 1  \n",
-       "...                  ...               ...  \n",
-       "1888           63.145652                 2  \n",
-       "1889           65.841013                 3  \n",
-       "1890           69.176246                 4  \n",
-       "1891           70.314904                 4  \n",
-       "1892           73.867845                 4  \n",
-       "\n",
-       "[1893 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'DataFrame' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-138d3909883d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Combine the data into a single dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mmouse_project\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmouse_metadata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstudy_results\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mmouse_project\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+     ]
     }
    ],
    "source": [
@@ -234,7 +53,7 @@
     "\n",
     "# Combine the data into a single dataset\n",
     "mouse_project = pd.merge(mouse_metadata,study_results)\n",
-    "mouse_project"
+    "mouse_project()"
    ]
   },
   {
@@ -745,6 +564,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mouse_project' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-db1823ec14b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcapomulin_only\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmouse_project\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmouse_project\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Capomulin\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcapomulin_only\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mouse_project' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "capomulin_only = mouse_project.loc(mouse_project[\"Capomulin\"])\n",
+    "capomulin_only"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -762,6 +603,8 @@
    ],
    "source": [
     "# Generate a scatter plot of mouse weight versus average tumor volume for the Capomulin regimen\n",
+    "\n",
+    "\n",
     "mouse_weight = mouse_project[\"Weight (g)\"]\n",
     "average_tumor = mouse_project[\"Tumor Volume (mm3)\"]\n",
     "\n",
